# sales-wizard

./: README.md  pyproject.toml  run_agent.sh
sales_wizard/: extract_course.py  ipl_win_predictor.py  sales_pitch_crew.py  sales_training_module.py
