[tool.poetry]
name = "sales-wizard"
version = "0.1.0"
description = ""
authors = ["Aneesh Anil <aneesh@geektrust.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.6"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
